--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "telegraf": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
+  "engines": {
+    "node": "16.15.0",
+    "npm": "8.5.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
